2024-07-02T00:43:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9753092295 # 344
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-02
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 839 1314 / 844 1319
* notice: next accum: outdated-unq outdated-all / unq all: 840 1315 / 844 1319
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-18] / []

2024-06-29T00:42:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9720174697 # 341
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-29
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 838 1313 / 844 1319
* notice: next accum: outdated-unq outdated-all / unq all: 839 1314 / 844 1319
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-15] / []

2024-06-28T00:43:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9705599826 # 340
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-28
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 838 1313 / 843 1318
* notice: next accum: outdated-unq outdated-all / unq all: 838 1313 / 844 1319
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-06-27]

2024-06-27T00:43:41Z: