@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-02T00:43:47Z",
-  "count_outdated" : 1315,
-  "uniques_outdated" : 840,
+  "timestamp" : "2024-07-03T00:43:39Z",
+  "count_outdated" : 1316,
+  "uniques_outdated" : 841,
   "count" : 1319,
   "uniques" : 844,
   "clones" : [
-    {
-      "timestamp": "2024-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-06-20T00:00:00Z",
       "count": 1,
