@@ -1,3 +1,12 @@
+2024-07-03T00:43:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9769980300 # 345
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-03
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 840 1315 / 844 1319
+* notice: next accum: outdated-unq outdated-all / unq all: 841 1316 / 844 1319
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-06-19] / []
+
 2024-07-02T00:43:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9753092295 # 344
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-02
